--- a/_posts/2023-12-01-ROS_기반_경로계획_시스템의_실시간_요구_사항_분석.md
+++ b/_posts/2023-12-01-ROS_기반_경로계획_시스템의_실시간_요구_사항_분석.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 자이로 센서 데이터를 활용한 양치 위치 추정 및 비지도 학습 클러스터링을 통한 검증
+title: ROS 기반 경로계획 시스템의 실시간 요구 사항 분석
 date: '2023-12-01 12:00:00'
 categories:
 - publication
@@ -8,6 +8,6 @@ categories:
 - conference
 - conference_domestic
 description: |-
-  권민욱, 김도윤, 임대연, 김진현<br />
+  조수민, 조민아, 김진현, 강인혜<br />
   한국 정보과학회 논문집, Dec 2023
 ---
